update education and experience

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                     <h3>My current research interest is <span class="span-focus">Human-Computer Interaction</span> especially in <span class="span-focus">Virtaul Reality(VR)</span> and <span class="span-focus">Augmented Reality(AR)</span>. More specifically, I’m interested in utilizing VR and AR technologies to provide a better human-human, human-computer and human-robot interactions in different scenarios. Recently, I have developed a prototype system that allows people to capture all the details of a cherish memories and fully recreate the memory to re-experience it with their friends afterward. Unlike viewing photo or video, it provides a time machine-like experience which brings people back to the memory and people have full agency to view the experience from different perspectives and to paused, slowed down or rewound the experience, or intervene the past as well. I have started 2 projects to explore the potential of “Reliving Experience in VR ” in 2 different research areas including Social Interactions and Technology-Mediated Memory in VR (with <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Won</a>) and Computer-Mediated Communication (with <a href="sfussell.hci.cornell.edu/" target="_blank">Prof. Susan Fussell</a>).</h3>
 
-                    <h3>In terms of research in AR, I have been working with <a href="https://www.huaishu.me/" target="_blank">Dr. Huaishu Peng</a> and Prof. François on the project - RoMA: Interactive Fabrication with Augmented Reality and a Robotic 3D Printer - which published at CHI 2018.  I believe AR technologies offer new opportunities for robots to communicate about their intents and the environments they share with human teammates. Thus, in the future, I also plan to explore whether people can build better trust with robot partners through visualizing explanations of robots' behavior in AR.</h3>
+                    <h3>In terms of the research in AR, I have been working with <a href="https://www.huaishu.me/" target="_blank">Dr. Huaishu Peng</a> and Prof. François on the project - RoMA: Interactive Fabrication with Augmented Reality and a Robotic 3D Printer - which published at CHI 2018.  I believe AR technologies offer new opportunities for robots to communicate about their intents and the environments they share with human teammates. Thus, in the future, I also plan to explore whether people can build better trust with robot partners through visualizing explanations of robots' behavior in AR.</h3>
     
                 </div>                
             </div>
@@ -118,6 +118,10 @@
                     <h2>Education</h2>
                 </div>
                 <div class="col-md-9 about-list">
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Ph.D.</span> in CS, Cornell University</h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Sep '16 – Current</h5></li>
+                    </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">M.S.</span> in CS, National Taiwan University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Sep '12 – Jun '14</h5></li>
@@ -134,12 +138,24 @@
                 </div>
                 <div class="col-md-9 about-list">
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Intern,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Stanford university</a></h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Apr '15 – Sep '15</h5></li>
+                        <li class="list-left"><h3><span class="bold">Research Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2018</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Exhibitors,</span><a href="https://taiwan-doit.com/annual2014" class="link" target="_blank">2014 DOIT Taiwan Open Innovations Festival</a></h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Oct '14 – Jul '14</h5></li>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2017</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2017</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2016</h5></li>
+                    </ul>
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Research Intern,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Stanford university</a></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Apr '15 – Sep '15</h5></li>
                     </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">Chief Coordinator,</span><a href="https://drive.google.com/file/d/0B-TOzIcx7m_melhIZkRpWGtHd0NJOGNnQi15VVdod2kzbGZz/view?usp=sharing" class="link" target="_blank">2015 CHI@NTU Workshop</a></h3></li>
@@ -148,15 +164,7 @@
                     <ul>
                         <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="https://mobilehci.hackpad.com/2014S-Mobile-HCI-Class-Schedule-wM4Izj9r0Oa" class="link" target="_blank">“Mobile HCI”</a></h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Feb '14 – Jun '14</h5></li>
-                    </ul>
-                    <ul>
-                        <li class="list-left"><h3><span class="bold">Chief Counselor,</span>Compulsory Military Service, Taiwan</h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Jun '10 – Jul '11</h5></li>
-                    </ul>
-                    <ul>
-                        <li class="list-left"><h3><span class="bold">Software Engineer,</span><a href="http://www.eztable.com/" class="link" target="_blank">EZTABLE</a></h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Jun '09 – Jun '10</h5></li>
-                    </ul>                 
+                    </ul>                
                 </div>                                            
             </div>
             <p class="btn-download text-center"><a href="https://drive.google.com/file/d/0B-TOzIcx7m_mY2dvNzZFVGx4dzA/view" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
