--- a/index.html
+++ b/index.html
@@ -138,23 +138,23 @@
                 </div>
                 <div class="col-md-9 about-list">
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Assistant,</span>Project - Remote Touch for Telepresence Robots, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2018</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>CS 5306 Crowdsourcing and Human Computation, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2017</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>CS 1112 - Introduction to Computing using Matlab, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2017</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Corenll University</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>CS 3110 - Data Structures and Functional Programming, Cornell University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2016</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Intern,</span><a href="http://www-cs.stanford.edu/" class="link" target="_blank">Stanford university</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Intern,</span>Human-Drone Interaction project, Stanford University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Apr '15 – Sep '15</h5></li>
                     </ul>
                     <ul>
