--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Aug '14 – Sep '14</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="https://mobilehci.hackpad.com/2014S-Mobile-HCI-Class-Schedule-wM4Izj9r0Oa" class="link" target="_blank">Mobile HCI, National Taiwan University</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="https://mobilehci.hackpad.com/2014S-Mobile-HCI-Class-Schedule-wM4Izj9r0Oa" class="link" target="_blank">Mobile HCI</a>, National Taiwan University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Feb '14 – Jun '14</h5></li>
                     </ul>                
                 </div>                                            
@@ -197,7 +197,7 @@
     <section id="project">
         <div class="container">
             <h1>projects</h1>
-            <!-- PalmType project-->
+            <!-- Reduct project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
                     <div class="my-slide">
@@ -219,6 +219,31 @@
                         <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
                         <li><a href="http://dl.acm.org/citation.cfm?id=2785886" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
                         <li><a href="https://www.youtube.com/watch?v=mwjADJ-v8nU" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- Reduct project -->
+            <!-- PalmType project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/reduct_img1.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/reduct_img2.png"></div>
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">CHI 2017</header>
+                        Teaching Programming with Gamified Semantics
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i>Ian Arawjo, <span class="bold">Cheng-Yao Wang,</span> Andrew C. Myers, Erik Andersen, and François Guimbretière</h4>
+                    <h3 class="record"><i class="fa fa-book"></i>Published in CHI 2017 (full paper)</h3>             
+                    <h3>We present Reduct, an educational game embodying a new, comprehension-first approach to teaching novices core programming concepts which include functions, Booleans, equality, conditionals, and mapping functions over sets. In this novel teaching strategy, the player executes code using reduction-based operational semantics. During gameplay, code representations fade from concrete, block-based graphics to the actual syntax of JavaScript ES2015. Our study result shows that novices demonstrated promising learning of core concepts expressed in actual JavaScript code in a short timeframe with our Reduct game.</h3>
+                    <ul class="list-btn">
+                        <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
+                        <li><a href="https://dl.acm.org/citation.cfm?id=3025711" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
+                        <li><a href="https://www.youtube.com/watch?v=vSXBA95uQ04" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
                     </ul>                    
                 </div>
             </div>
@@ -382,7 +407,7 @@
                 <div class="col-md-7 text-left text-style">
                     <h2>drone.io: Gesture Input and Projected Output for Collocated Human-Drone Interaction</h2>
                     <!--<h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang,</span>Min-Chieh Hsiu, Chin-Yu Chien, Shuo Yang</h4>-->
-                    <h3 class="record"><i class="fa fa-book"></i>Under review for ACM CHI 2016 (Full paper)</h3>
+                    <h3 class="record"><i class="fa fa-book"></i>Reserach intern project at Stanford University (2015) </h3>
                     <h3>We introduce drone.io, a body-centric interface to facilitate natural HDI where users interact with simple gestures above a projected radial menu. drone.io is a fully embedded input-output system using a depth camera to recognize the position and shape of the user’s hand and a mobile projector to display the interface in real time. We show that it is an easy, effective, and enjoyable way for people to interact with drones.</h3>
                     <!--
                     <ul class="list-btn">
