--- a/index.html
+++ b/index.html
@@ -197,7 +197,59 @@
     <section id="project">
         <div class="container">
             <h1>projects</h1>
+            <!-- RoMA project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RoMA_img1.jpg"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RoMA_img2.jpg"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RoMA_img3.jpg"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RoMA_img4.jpg"></div>
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">CHI 2018</header>
+                        RoMA: Interactive Fabrication with Augmented Reality and a Robotic 3D Printer
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i>Huaishu Peng, <span class="bold">Cheng-Yao Wang</span>*, Jimmy Briggs*, Kevin Guo, Joseph Kider, Stefanie Mueller, Patrick Baudisch, François Guimbretière. (*equal contribution)</h4>
+                    <h3 class="record"><i class="fa fa-book"></i>Published in CHI 2018 (full paper)</h3>             
+                    <h3>We present the Robotic Modeling Assistant (RoMA), an interactive fabrication system providing a fast, precise, hands-on and in-situ modeling experience with an augmented reality CAD editor and a robotic arm 3D printer. With RoMA, users can integrate real-world constraints into a design rapidly, allowing them to create well-proportioned tangible artifacts. Users can even directly design on and around an existing object, and extending the artifact by in-situ fabrication.</h3>
+                    <ul class="list-btn">
+                        <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
+                        <li><a href="http://www.huaishu.me/projects/roma.pdf" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
+                        <li><a href="https://www.youtube.com/watch?v=K_wWuYD1Fkg" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- RoMA project -->
             <!-- Reduct project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/reduct_img1.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/reduct_img2.png"></div>
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">CHI 2017</header>
+                        Teaching Programming with Gamified Semantics
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i>Ian Arawjo, <span class="bold">Cheng-Yao Wang,</span> Andrew C. Myers, Erik Andersen, and François Guimbretière</h4>
+                    <h3 class="record"><i class="fa fa-book"></i>Published in CHI 2017 (full paper)</h3>             
+                    <h3>We present Reduct, an educational game embodying a new, comprehension-first approach to teaching novices core programming concepts which include functions, Booleans, equality, conditionals, and mapping functions over sets. In this novel teaching strategy, the player executes code using reduction-based operational semantics. During gameplay, code representations fade from concrete, block-based graphics to the actual syntax of JavaScript ES2015. Our study result shows that novices demonstrated promising learning of core concepts expressed in actual JavaScript code in a short timeframe with our Reduct game.</h3>
+                    <ul class="list-btn">
+                        <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
+                        <li><a href="https://dl.acm.org/citation.cfm?id=3025711" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
+                        <li><a href="https://www.youtube.com/watch?v=vSXBA95uQ04" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- Reduct project -->
+            <!-- PalmType project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
                     <div class="my-slide">
@@ -219,31 +271,6 @@
                         <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
                         <li><a href="http://dl.acm.org/citation.cfm?id=2785886" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
                         <li><a href="https://www.youtube.com/watch?v=mwjADJ-v8nU" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
-                    </ul>                    
-                </div>
-            </div>
-            <!-- Reduct project -->
-            <!-- PalmType project-->
-            <div class="row v-center">
-                <div class="col-md-5 text-center img-style small-padding">
-                    <div class="my-slide">
-                        <!-- Wrapper for slides -->
-                        <div><img class="img-responsive img-centered" data-lazy="img/projects/reduct_img1.png"></div>
-                        <div><img class="img-responsive img-centered" data-lazy="img/projects/reduct_img2.png"></div>
-                    </div>                    
-                </div>                            
-                <div class="col-md-7 text-left text-style">
-                    <h2>
-                        <header class="con3">CHI 2017</header>
-                        Teaching Programming with Gamified Semantics
-                    </h2>
-                    <h4 class="m-top"><i class="fa fa-users"></i>Ian Arawjo, <span class="bold">Cheng-Yao Wang,</span> Andrew C. Myers, Erik Andersen, and François Guimbretière</h4>
-                    <h3 class="record"><i class="fa fa-book"></i>Published in CHI 2017 (full paper)</h3>             
-                    <h3>We present Reduct, an educational game embodying a new, comprehension-first approach to teaching novices core programming concepts which include functions, Booleans, equality, conditionals, and mapping functions over sets. In this novel teaching strategy, the player executes code using reduction-based operational semantics. During gameplay, code representations fade from concrete, block-based graphics to the actual syntax of JavaScript ES2015. Our study result shows that novices demonstrated promising learning of core concepts expressed in actual JavaScript code in a short timeframe with our Reduct game.</h3>
-                    <ul class="list-btn">
-                        <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
-                        <li><a href="https://dl.acm.org/citation.cfm?id=3025711" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
-                        <li><a href="https://www.youtube.com/watch?v=vSXBA95uQ04" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
                     </ul>                    
                 </div>
             </div>
