--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <h3 class="record"><i class="fa fa-book"></i>Published in CHI 2018 (full paper)</h3>             
                     <h3>We present the Robotic Modeling Assistant (RoMA), an interactive fabrication system providing a fast, precise, hands-on and in-situ modeling experience with an augmented reality CAD editor and a robotic arm 3D printer. With RoMA, users can integrate real-world constraints into a design rapidly, allowing them to create well-proportioned tangible artifacts. Users can even directly design on and around an existing object, and extending the artifact by in-situ fabrication.</h3>
                     <ul class="list-btn">
-                        <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
+                        <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
                         <li><a href="http://www.huaishu.me/projects/roma.pdf" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
                         <li><a href="https://www.youtube.com/watch?v=K_wWuYD1Fkg" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
                     </ul>                    
@@ -241,7 +241,7 @@
                     <h3 class="record"><i class="fa fa-book"></i>Published in CHI 2017 (full paper)</h3>             
                     <h3>We present Reduct, an educational game embodying a new, comprehension-first approach to teaching novices core programming concepts which include functions, Booleans, equality, conditionals, and mapping functions over sets. In this novel teaching strategy, the player executes code using reduction-based operational semantics. During gameplay, code representations fade from concrete, block-based graphics to the actual syntax of JavaScript ES2015. Our study result shows that novices demonstrated promising learning of core concepts expressed in actual JavaScript code in a short timeframe with our Reduct game.</h3>
                     <ul class="list-btn">
-                        <li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>
+                        <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
                         <li><a href="https://dl.acm.org/citation.cfm?id=3025711" target="_blank" class="btn-paper"><i class="fa fa-file-text"></i>paper</a></li>                       
                         <li><a href="https://www.youtube.com/watch?v=vSXBA95uQ04" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video</a></li>                          
                     </ul>                    
@@ -455,17 +455,15 @@
                 <div class="col-md-4 skill-text">
                     <h2>Computer Science</h2>
                     <ul>
-                        <li>Web, smartphone, smart watches, head-mounted displays app development</li>
-                        <li>C/C++, JAVA, iOS, Android, Rails, Node.js</li>
-                        <li>Computer Vision, Gesture Recognition, Machine Learning, Augmented Reality</li>
+                        <li>C#, Unity, Web Languages(JavaScript/CSS/NodeJS), C/C++, JAVA, Python</li>
+                        <li>Human-Computer Interaction, Virtual Reality, Augmented Reality, Computer Graphic, Computer Vision</li>
                     </ul>
                 </div>
                 <div class="col-md-4 skill-text">
-                    <h2>Hardware Prototyping</h2>
+                    <h2>Rapid Prototyping</h2>
                     <ul>
-                        <li>Using hardware rapid prototyping tools to create systems</li>
-                        <li>Infrared sensor, depth camera, robotic car, drone</li>
-                        <li>Arduino, Raspberry Pi, Processing, 3D printing</li>
+                        <li>Design and Rapid Prototyping with laser cutter and 3D printing</li>
+                        <li>Arduino, Raspberry Pi, Processing</li>
                     </ul>
                 </div>
                 <div class="col-md-4 skill-text">
