update new VR project

--- a/index.html
+++ b/index.html
@@ -197,6 +197,32 @@
     <section id="project">
         <div class="container">
             <h1>projects</h1>
+            <!-- RelivingVR project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/Asynchronous collaboration in VR_2.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/Asynchronous collaboration in VR.jpg"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RelivingVRExperience.jpg"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RelivingVRExperience2.png"></div>                      
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">On-going</header>
+                        Understanding social interactions and emotional responses in capturing and reliving VR experience.
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span></h4>             
+                    <h3>we present a prototype system that allows people to capture and relive memories in VR. While reliving the experience in VR with our prototype system, people have full agency to view the experience from different perspectives and to paused, slowed down or rewound the experience as well. More importantly, through our prototype system, we plan to design and conduct 2 user studies to explore the 2 important research questions: RQ1: How does reliving memories in VR affect our emotions and RQ2: What social interactions would occur while people relive experience with others</h3>
+                    <ul class="list-btn">
+                        <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
+                        <li><a href="https://www.youtube.com/edit?o=U&video_id=Mn4o5R_-ERI" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video 1</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=CG_qL5p_QEM" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video 2</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- RelivingVR project -->
             <!-- RoMA project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
@@ -483,6 +509,16 @@
             <div class="row">
                 <div class="col-lg-5 text-center col-left-style">
                     <h1>publications</h1>
+                    <div class="list-wrap text-left">
+                        <h2><a href="http://www.huaishu.me/projects/roma.pdf" target="_blank">RoMA: Interactive Fabrication with Augmented Reality and a Robotic 3D Printer</a></h2>
+                        <h3>ACM CHI 2018, Full Paper</h3>
+                         <h4><i class="fa fa-users"></i>Huaishu Peng, <span class="bold">Cheng-Yao Wang</span>*, Jimmy Briggs*, Kevin Guo, Joseph Kider, Stefanie Mueller, Patrick Baudisch, François Guimbretière. (*equal contribution)</h4>              
+                    </div>
+                    <div class="list-wrap text-left">
+                        <h2><a href="https://dl.acm.org/citation.cfm?id=3025711" target="_blank">Teaching Programming with Gamified Semantics</a></h2>
+                        <h3>ACM CHI 2017, Full Paper</h3>
+                         <h4><i class="fa fa-users"></i>Ian Arawjo, <span class="bold">Cheng-Yao Wang</span>, Andrew C. Myers, Erik Andersen, and François Guimbretière</h4>              
+                    </div>
                     <div class="list-wrap text-left">
                         <h2><a href="http://dl.acm.org/citation.cfm?id=2785886" target="_blank">PalmType: Using Palms as Keyboards for Smart Glasses</a></h2>
                         <h3>ACM MobileHCI 2015, Full Paper</h3>
