update new VR project intro

--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
                 <div class="col-md-7 text-left text-style">
                     <h2>
                         <header class="con3">On-going</header>
-                        Understanding social interactions and emotional responses in capturing and reliving VR experience.
+                        Capturing and Relving Experience in VR
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span></h4>             
                     <h3>we present a prototype system that allows people to capture and relive memories in VR. While reliving the experience in VR with our prototype system, people have full agency to view the experience from different perspectives and to paused, slowed down or rewound the experience as well. More importantly, through our prototype system, we plan to design and conduct 2 user studies to explore the 2 important research questions: RQ1: How does reliving memories in VR affect our emotions and RQ2: What social interactions would occur while people relive experience with others</h3>
                     <ul class="list-btn">
                         <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
-                        <li><a href="https://www.youtube.com/edit?o=U&video_id=Mn4o5R_-ERI" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video 1</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=Mn4o5R_-ERI" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video 1</a></li>
                         <li><a href="https://www.youtube.com/watch?v=CG_qL5p_QEM" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>video 2</a></li>                          
                     </ul>                    
                 </div>
