--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="col-md-7 text-left text-style">
                     <h2>
                         <header class="con3">On-going</header>
-                        Capturing and Relving Experience in VR
+                        Capturing and Reliving Experience in VR
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span></h4>             
                     <h3>we present a prototype system that allows people to capture and relive memories in VR. While reliving the experience in VR with our prototype system, people have full agency to view the experience from different perspectives and to paused, slowed down or rewound the experience as well. More importantly, through our prototype system, we plan to design and conduct 2 user studies to explore the 2 important research questions: RQ1: How does reliving memories in VR affect our emotions and RQ2: What social interactions would occur while people relive experience with others</h3>
