--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </ul>                
                 </div>                                            
             </div>
-            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1fuOInp46tMtEuwy1HiNejzNshdLQ0KK7" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
+            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1KqXXk4NcK5ubnBC7MEA5b9Yu451HQag5" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
     </section>
 
@@ -181,17 +181,17 @@
         <div class="my-skill">            
             <ul>
                 <li>
-                    <h2 style="width: 250px;">Computer Vision</h2>
+                    <h2>Computer Vision</h2>
                     <p class="skill-img"><img class="lazy" data-original="img/a2.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
-                    <h2 style="width: 250px;">Virtual Reailty</h2>
+                    <h2>Virtual Reailty</h2>
                     <p class="skill-img"><img class="lazy" data-original="img/a1.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
-                    <h2 style="width: 250px;">Mixed method Research</h2>
+                    <h2>Mixed method Research</h2>
                     <p class="skill-img"><img class="lazy" data-original="img/skill3.png"></p>
                 </li>
             </ul>            
