--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
             <ul>
                 <li>
                     <h2>Computer Vision</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/a2.png"></p>
+                    <p class="skill-img"><img class="lazy" data-original="img/skill1_2.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
                     <h2>Virtual Reailty</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/a1.png"></p>
+                    <p class="skill-img"><img class="lazy" data-original="img/skill2_2.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
