udpate contents and fix image links

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-md-9 about-content">
                     <h3>I’m Eric Wang, a Ph.D. student in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at Stanford University, primarily working with <a href="https://profiles.stanford.edu/james-landay/" target="_blank">Prof. James Landay</a>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
 
-                     <h3>My research interests are <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> My current topic is focused on how recent developments in capture technology and virtual reality can transform the way people share knowledge and experiences beyond photo/video recordings. More specifically, I’m interested in (1) utilizing computer vision and virtual reality to enable sharing experiences through <span class="bold">socially reliving experiences in VR</span>; (2) leveraging this time-machine-like VR reliving experience to <span class="bold">support better remote collaboration and learning</span>; and (3) designing <span class="bold">VR privacy-preserving mechanisms</span> for sharing contents in VR without privacy concerns.</h3>
+                     <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> My current topic is focused on transforming the way people share knowledge and experiences beyond photo/video recordings. More specifically, I’m interested in (1) utilizing deep learning, computer vision and VR to enable sharing experiences through <span class="bold">socially reliving experiences in VR</span>; (2) leveraging such novel time-machine-like VR reliving experience to <span class="bold">support better remote collaboration and learning</span>; and (3) designing <span class="bold">VR privacy-preserving mechanisms</span> for sharing contents in VR without privacy concerns.</h3>
     
                 </div>                
             </div>
@@ -211,8 +211,8 @@
                         <!-- Wrapper for slides -->
                         <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveInVR_study.png"></div>
                         <div><img class="img-responsive img-centered" data-lazy="img/projects/Co-WatchDT.png"></div>
-                        <div><img class="img-responsive img-centered" data-lazy="img/projects/Co-WatchVR.png"></div>
-                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveinVR.png"></div>                     
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/Co-watchVR.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/ReliveInVR.png"></div>                     
                     </div>                    
                 </div>                            
                 <div class="col-md-7 text-left text-style">
@@ -667,7 +667,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3>Last Update: Jan. 2015</h3>
+                    <h3>Last Update: Nov. 2019</h3>
                 </div>
             </div>
         </div>
