updated CHI 2020 acceptance

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </ul>                
                 </div>                                            
             </div>
-            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1KqXXk4NcK5ubnBC7MEA5b9Yu451HQag5" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
+            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1w9KL6mv-a4uSyAlBPmGDXsTtpD9h83JB" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
     </section>
 
@@ -217,10 +217,11 @@
                 </div>                            
                 <div class="col-md-7 text-left text-style">
                     <h2>
+                        <header class="con3">CHI 2020</header>
                         Again, Together: Socially Reliving Virtual Reality Experiences When Separated
                     </h2>
                     <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>             
-                    <h3 class="record"><i class="fa fa-book"></i>Under Submission</h3>
+                    <h3 class="record"><i class="fa fa-book"></i>Accepted by CHI 2020</h3>
                     <h3>We describe ReliveInVR, a new time-machine-like VR experience sharing method. ReliveInVR allows multiple users to immerse themselves in the relived experience together and independently view the experience from any perspective. We conducted a 1x3 within-subject study with 26 dyads to compare ReliveInVR with (1) co-watching 360-degree videos on desktop, and (2) co-watching 360-degree videos in VR. Our results suggest that participants reported higher levels of immersion and social presence in ReliveInVR. Participants in ReliveInVR also understood the shared experience better, discovered unnoticed things together and found the sharing experience more fulfilling.</h3>
                     <ul class="list-btn">
                         <!--<li><a href="#workModal3" class="btn-more" data-toggle="modal"><i class="fa fa-plus-square"></i>more info</a></li>-->
@@ -574,9 +575,14 @@
                 <div class="col-lg-5 text-center col-left-style">
                     <h1>publications</h1>
                     <div class="list-wrap text-left">
+                        <h2>Again, Together: Socially Reliving Virtual Reality Experiences When Separated</h2>
+                        <h3>CHI 2020, Full Paper</h3>
+                         <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>              
+                    </div>
+                    <div class="list-wrap text-left">
                         <h2><a href="https://ieeexplore.ieee.org/document/8797789" target="_blank">RelivelnVR: Capturing and Reliving VirtualReality Experiences Together</a></h2>
                         <h3>IEEE VR 2019, Poster</h3>
-                         <h4><i class="fa fa-users"></i>span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Upol Ehsan, Jingjin Li, and Andrea Stevenson Won</h4>              
+                         <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Upol Ehsan, Jingjin Li, and Andrea Stevenson Won</h4>              
                     </div>
                     <div class="list-wrap text-left">
                         <h2><a href="https://ieeexplore.ieee.org/document/8797789" target="_blank">VR-Replay: Capturing andReplaying Avatars in VR for Asynchronous 3D Collaborative Design</a></h2>
